# dkos

./: default.nix
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: fbcon.rs  main.rs  requests.rs  util.rs
kernel/src/mem/: mod.rs  pmm.rs
npins/: sources.json
