[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kernel"
test = false
bench = false

[build-dependencies]
cc = "1.0"

[dependencies]
spleen-font.workspace = true
uart_16550.workspace = true
limine.workspace = true
lazy_static.workspace = true
spin.workspace = true
seq-macro.workspace = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
